fix: build process